--- a/styl.css
+++ b/styl.css
@@ -1,31 +1,39 @@
-  body {
+body{
     background-color: #aaaabb;
     text-align: center;
-  }
- #div{
- margin-left: auto;
- margin-right: auto;
+	margin: 0px;
+}
+  
+#div{
  text-align: center;
  font-size: 50px;
  background-color: #58e026;
- margin-up: 10px;
- margin-down: 15px;
+ border-color: black;
+ border-style: solid;
+ border-width: 3px;
 }
+
+#otherthantitle{
+	margin:8px;
+}
+
 .kot{
 width: 1em
 }
-  img{margin:10px}
-  .rec{
+
+img{margin:10px}
+ 
+.rec{
     background-color: #bbbbcc;
     position: relative; 
     display: inline-block; 
-    width: 33%; 
+	width: 33%;
     
-  }
-  .recbox{
+}
+.recbox{
      margin-left: auto;
- margin-right: auto;
- text-align: center;
-  }
+	margin-right: auto;
+	text-align: center;
+}
   
-  .h20{height:20px}
+.h20{height:20px}
