--- a/styl.css
+++ b/styl.css
@@ -107,3 +107,13 @@ h1{
 	padding: 2px;
 	font-size: 16px;
 }
+
+
+#uwu {
+    display: inline;
+    color: pink;
+}
+#uwu:hover {
+    color: red;
+    font-size: 300%;
+}
