--- a/styl.css
+++ b/styl.css
@@ -1,3 +1,18 @@
+@font-face {
+    font-family: 'SF-Gushing-Meadow';
+    src: url('font/SFGushingMeadow.eot');
+    src: url('font/SFGushingMeadow.eot?#iefix') format('embedded-opentype'),
+        url('font/SFGushingMeadow.woff2') format('woff2'),
+        url('font/SFGushingMeadow.woff') format('woff'),
+        url('font/SFGushingMeadow.ttf') format('truetype'),
+        url('font/SFGushingMeadow.svg#SFGushingMeadow') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+
+
 body{
     background-color: #aaaabb;
     text-align: center;
@@ -97,7 +112,7 @@ h1{
 }
 
 .contentmaintext{
-	font-family: Comic Sans MS;
+	font-family: SF-Gushing-Meadow;
 	font-size: 24px;
 }
 
@@ -108,6 +123,22 @@ h1{
 	font-size: 16px;
 }
 
+@keyframes blinker {
+  100% {
+    color: red;
+  }
+  50%{
+	color: green;
+  }
+  0%{
+  	color: red;
+  }
+}
+
+#uwu-arrow-up:hover {
+	animation: blinker 1s linear infinite;
+}
+
 
 #uwu {
     display: inline;
@@ -116,4 +147,13 @@ h1{
 #uwu:hover {
     color: red;
     font-size: 300%;
+}
+
+
+#boo:hover{
+	color: #444;
+}
+
+#boo{
+	cursor: grab;
 }
