--- a/styl.css
+++ b/styl.css
@@ -46,7 +46,17 @@ body.mirrorme{
 	text-align: left;
 	background-color: lime;
 	user-select: none;
+	display: flex;
 }
+
+#header-clock{
+	margin-left: 15px;
+	margin-right: 15px;
+	border: none;
+
+	/*background-color: red;*/
+}
+
 
 #div{
 	text-align: center;
@@ -189,4 +199,9 @@ h1{
 
 #boo{
 	cursor: grab;
+}
+
+
+#title-wykrz{
+	font-family: Anonymous Pro;	
 }
